@@ -210,17 +210,22 @@ public abstract class AbstractTopology<T> {
                 .stream()
                 .map(this::createVertexFromInjection)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+                .toList());
         vertices.addAll(index.getStoreClient().getVoltageLevelLccConverterStations(networkUuid, index.getWorkingVariantNum(), voltageLevelResource.getId())
                 .stream()
                 .map(this::createVertexFromInjection)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+                .toList());
         vertices.addAll(index.getStoreClient().getVoltageLevelDanglingLines(networkUuid, index.getWorkingVariantNum(), voltageLevelResource.getId())
                 .stream()
                 .map(this::createVertexFromInjection)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+                .toList());
+        vertices.addAll(index.getStoreClient().getVoltageLevelGrounds(networkUuid, index.getWorkingVariantNum(), voltageLevelResource.getId())
+                .stream()
+                .map(this::createVertexFromInjection)
+                .filter(Objects::nonNull)
+                .toList());
         vertices.addAll(index.getStoreClient().getVoltageLevelLines(networkUuid, index.getWorkingVariantNum(), voltageLevelResource.getId())
                 .stream()
                 .flatMap(resource -> createVertextFromBranch(resource, voltageLevelResource).stream())
